Added header section

--- a/src/index.html
+++ b/src/index.html
@@ -42,9 +42,39 @@
 </head>
 
 <body>
+    <header>
+        <div class="container">
+            <div class="shop-pandora">
+                <a href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds"
+                    class="pandora-link">
+                    Shop the Disney X Pandora collection
+                </a>
+            </div>
 
-    <h1>Hello World </h1>
-    <!-- <div id="app"></div> -->
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="https://uk.pandora.net/en/">
+                    <img src="/src/assets/images/pandora-logo.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Charm Braclets<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Charms</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Featured</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
 </body>
 
 </html>
