Landing page structure built ready for styling

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="https://uk.pandora.net/en/">
-                    <img src="/src/assets/images/pandora-logo.png" alt="">
+                    <img src="/src/assets/images/pandora-logo.png" alt="Pandora Logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -73,8 +73,139 @@
                     </ul>
                 </div>
             </nav>
+
+            <section class="hero">
+                <div class="content-wrapper">
+                    <div class="hero-bg-img"></div>
+                    <div class="hero-txt-block">
+                        <div class="pandora-disney-logo">
+                            <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
+                                class="pandora-disney-logo">
+                        </div>
+                        <div class="txt">
+                            <h1 class="hero-hdr">Splash of magic</h1>
+                            <p class="text-block-desc">
+                                Discover the magical arrival of jewellery inspired
+                                by Disney’s The Little Mermaid
+                            </p>
+                        </div>
+                        <div class="shop-now-link-wrapper">
+                            <div class="shop-now-link">
+                                <a
+                                    href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds">
+                                    Shop now
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="hero-img-block">
+                        <img src="/src/assets/images/hero-featured-img.png" alt="Pandora x Disney featured image"
+                            class="hero-featured-img">
+                    </div>
+                </div>
+            </section>
         </div>
     </header>
+
+    <main class="main">
+        <div class="container">
+            <section class="mid-nav">
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Active</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
+            </section>
+
+            <section class="main-content">
+                <div class="content-wrapper">
+                    <img src="/src/assets/images/main-featured-img.jpg" alt="Pandora x Disney main featured image"
+                        class="main-featured-img">
+                    <div class="main-text-block">
+                        <div class="pandora-disney-logo">
+                            <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
+                                class="pandora-disney-logo">
+                        </div>
+                        <div class="txt">
+                            <p class="text-block-desc">
+                                Discover the magical arrival of jewellery inspired
+                                by Disney’s The Little Mermaid
+                            </p>
+                        </div>
+                        <div class="shop-now-link-wrapper">
+                            <div class="shop-now-link">
+                                <a
+                                    href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds">
+                                    Shop now
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="cards">
+                <div class="content-wrapper">
+                    <div class="card">
+                        <img src="/src/assets/images/card-1.jpg" alt="Pandora x Disney featured product"
+                            class="card-img">
+                        <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
+                            class="pandora-disney-logo">
+                        <h3 class="product-desc">Disney Luminous Ariel Dangle Charm</h3>
+                        <span class="price">£60.00</span>
+                    </div>
+
+                    <div class="card">
+                        <img src="/src/assets/images/card-1.jpg" alt="Pandora x Disney featured product"
+                            class="card-img">
+                        <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
+                            class="pandora-disney-logo">
+                        <h3 class="product-desc">Disney Ariel Dangle Charm</h3>
+                        <span class="price">£55.00</span>
+                    </div>
+
+                    <div class="card">
+                        <img src="/src/assets/images/card-1.jpg" alt="Pandora x Disney featured product"
+                            class="card-img">
+                        <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
+                            class="pandora-disney-logo">
+                        <h3 class="product-desc">Disney The Little Mermaid Flounder Charm</h3>
+                        <span class="price">£55.00</span>
+                    </div>
+
+                    <div class="shop-now-link">
+                        <a
+                            href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds">
+                            Shop now
+                        </a>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="content-wrapper">
+                <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
+                    class="pandora-disney-logo">
+                <p class="copyright">
+                    Landing page. &copy;2020 Copyright. Designed & Developed by Chantal St Louis with love
+                </p>
+
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
