--- a/src/index.html
+++ b/src/index.html
@@ -44,16 +44,16 @@
 <body>
     <header>
         <div class="container">
-            <div class="shop-pandora">
+            <div class="shop-pandora text-center">
                 <a href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds"
-                    class="pandora-link">
+                    target="_blank" class="pandora-link img-fluid">
                     Shop the Disney X Pandora collection
                 </a>
             </div>
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="https://uk.pandora.net/en/">
-                    <img src="/src/assets/images/pandora-logo.png" alt="Pandora Logo">
+                <a class="navbar-brand" href="https://uk.pandora.net/en/" target="_blank">
+                    <img src="/src/assets/images/pandora-logo.png" alt="Pandora Logo" class="pandora-logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,34 +74,35 @@
                 </div>
             </nav>
 
+
+            <!-- Hero Image -->
             <section class="hero">
                 <div class="content-wrapper">
-                    <div class="hero-bg-img"></div>
-                    <div class="hero-txt-block">
-                        <div class="pandora-disney-logo">
-                            <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
-                                class="pandora-disney-logo">
+                    <div class="hero-bg-img">
+                        <div class="hero-featured-img-block">
+                            <img src="/src/assets/images/hero-featured-img.png" alt="Pandora x Disney featured image"
+                                class="hero-featured-img img-fluid">
                         </div>
-                        <div class="txt">
-                            <h1 class="hero-hdr">Splash of magic</h1>
-                            <p class="text-block-desc">
-                                Discover the magical arrival of jewellery inspired
-                                by Disney’s The Little Mermaid
-                            </p>
-                        </div>
-                        <div class="shop-now-link-wrapper">
-                            <div class="shop-now-link">
-                                <a
-                                    href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds">
+
+                        <div class="hero-txt-block">
+                            <div class="pandora-disney-logo">
+                                <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
+                                    class="pandora-disney-logo img-fluid">
+                            </div>
+                            <div class="hero-txt">
+                                <h1 class="hero-hdr">Splash of magic</h1>
+                                <p class="text-block-desc">
+                                    Discover the magical arrival of jewellery inspired
+                                    by Disney’s The Little Mermaid
+                                </p>
+                            </div>
+                            <div class="hero-link-wrapper">
+                                <a href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds"
+                                    target="_blank" class="box-link shop-now-link">
                                     Shop now
                                 </a>
                             </div>
                         </div>
-                    </div>
-
-                    <div class="hero-img-block">
-                        <img src="/src/assets/images/hero-featured-img.png" alt="Pandora x Disney featured image"
-                            class="hero-featured-img">
                     </div>
                 </div>
             </section>
@@ -113,16 +114,13 @@
             <section class="mid-nav">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Active</a>
+                        <a class="nav-link active" href="#">Charm Braclets</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#">Collection</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        <a class="nav-link" href="#">Discover</a>
                     </li>
                 </ul>
             </section>
@@ -130,7 +128,7 @@
             <section class="main-content">
                 <div class="content-wrapper">
                     <img src="/src/assets/images/main-featured-img.jpg" alt="Pandora x Disney main featured image"
-                        class="main-featured-img">
+                        class="main-featured-img img-fluid">
                     <div class="main-text-block">
                         <div class="pandora-disney-logo">
                             <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
@@ -142,13 +140,11 @@
                                 by Disney’s The Little Mermaid
                             </p>
                         </div>
-                        <div class="shop-now-link-wrapper">
-                            <div class="shop-now-link">
-                                <a
-                                    href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds">
-                                    Shop now
-                                </a>
-                            </div>
+                        <div class="main-link-wrapper">
+                            <a href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds"
+                                target="_blank" class="box-link shop-now-link">
+                                Shop now
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -156,36 +152,39 @@
 
             <section class="cards">
                 <div class="content-wrapper">
-                    <div class="card">
+
+                    <!-- Featured Cards -->
+                    <div class="featured-card">
                         <img src="/src/assets/images/card-1.jpg" alt="Pandora x Disney featured product"
-                            class="card-img">
+                            class="card-img img-fluid">
                         <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
                             class="pandora-disney-logo">
-                        <h3 class="product-desc">Disney Luminous Ariel Dangle Charm</h3>
+                        <p class="product-desc">Disney Luminous Ariel Dangle Charm</p>
                         <span class="price">£60.00</span>
                     </div>
 
-                    <div class="card">
-                        <img src="/src/assets/images/card-1.jpg" alt="Pandora x Disney featured product"
-                            class="card-img">
+                    <div class="featured-card">
+                        <img src="/src/assets/images/card-2.jpg" alt="Pandora x Disney featured product"
+                            class="card-img img-fluid">
                         <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
                             class="pandora-disney-logo">
-                        <h3 class="product-desc">Disney Ariel Dangle Charm</h3>
+                        <p class="product-desc">Disney Ariel Dangle Charm</p>
                         <span class="price">£55.00</span>
                     </div>
 
-                    <div class="card">
-                        <img src="/src/assets/images/card-1.jpg" alt="Pandora x Disney featured product"
-                            class="card-img">
+                    <div class="featured-card">
+                        <img src="/src/assets/images/card-3.jpg" alt="Pandora x Disney featured product"
+                            class="card-img img-fluid">
                         <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
                             class="pandora-disney-logo">
-                        <h3 class="product-desc">Disney The Little Mermaid Flounder Charm</h3>
+                        <p class="product-desc">Disney The Little Mermaid Flounder Charm</p>
                         <span class="price">£55.00</span>
                     </div>
 
-                    <div class="shop-now-link">
-                        <a
-                            href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds">
+                    <!-- Shop Now Link -->
+                    <div class="featured-link-wrapper">
+                        <a href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds"
+                            target="_blank" class="shop-now-link">
                             Shop now
                         </a>
                     </div>
