Main content featured image section complete at mobile and added slanted background to main content area

--- a/src/index.html
+++ b/src/index.html
@@ -51,28 +51,30 @@
                 </a>
             </div>
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="https://uk.pandora.net/en/" target="_blank">
-                    <img src="/src/assets/images/pandora-logo.png" alt="Pandora Logo" class="pandora-logo">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Charm Braclets<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Charms</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Featured</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+            <div class="top-nav">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="https://uk.pandora.net/en/" target="_blank">
+                        <img src="/src/assets/images/pandora-logo.png" alt="Pandora Logo" class="pandora-logo">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Charm Braclets<span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Charms</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Featured</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
 
 
             <!-- Hero Image -->
@@ -112,7 +114,7 @@
     <main class="main">
         <div class="container">
             <section class="mid-nav">
-                <ul class="nav">
+                <ul class="nav justify-content-center">
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Charm Braclets</a>
                     </li>
@@ -127,9 +129,11 @@
 
             <section class="main-content">
                 <div class="content-wrapper">
-                    <img src="/src/assets/images/main-featured-img.jpg" alt="Pandora x Disney main featured image"
-                        class="main-featured-img img-fluid">
-                    <div class="main-text-block">
+                    <div class="main-featured-img-wrapper">
+                        <img src="/src/assets/images/main-featured-img.png" alt="Pandora x Disney main featured image"
+                            class="main-featured-img img-fluid">
+                    </div>
+                    <div class="main-txt-block">
                         <div class="pandora-disney-logo">
                             <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
                                 class="pandora-disney-logo">
@@ -147,46 +151,44 @@
                             </a>
                         </div>
                     </div>
-                </div>
-            </section>
 
-            <section class="cards">
-                <div class="content-wrapper">
+                    <div class="cards">
 
-                    <!-- Featured Cards -->
-                    <div class="featured-card">
-                        <img src="/src/assets/images/card-1.jpg" alt="Pandora x Disney featured product"
-                            class="card-img img-fluid">
-                        <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
-                            class="pandora-disney-logo">
-                        <p class="product-desc">Disney Luminous Ariel Dangle Charm</p>
-                        <span class="price">£60.00</span>
-                    </div>
+                        <!-- Featured Cards -->
+                        <div class="featured-card text-center">
+                            <img src="/src/assets/images/card-1.png" alt="Pandora x Disney featured product"
+                                class="card-img img-fluid">
+                            <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
+                                class="pandora-disney-logo">
+                            <p class="product-desc">Disney Luminous Ariel Dangle Charm</p>
+                            <span class="price">£60.00</span>
+                        </div>
 
-                    <div class="featured-card">
-                        <img src="/src/assets/images/card-2.jpg" alt="Pandora x Disney featured product"
-                            class="card-img img-fluid">
-                        <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
-                            class="pandora-disney-logo">
-                        <p class="product-desc">Disney Ariel Dangle Charm</p>
-                        <span class="price">£55.00</span>
-                    </div>
+                        <div class="featured-card text-center">
+                            <img src="/src/assets/images/card-2.png" alt="Pandora x Disney featured product"
+                                class="card-img img-fluid">
+                            <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
+                                class="pandora-disney-logo">
+                            <p class="product-desc">Disney Ariel Dangle Charm</p>
+                            <span class="price">£55.00</span>
+                        </div>
 
-                    <div class="featured-card">
-                        <img src="/src/assets/images/card-3.jpg" alt="Pandora x Disney featured product"
-                            class="card-img img-fluid">
-                        <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
-                            class="pandora-disney-logo">
-                        <p class="product-desc">Disney The Little Mermaid Flounder Charm</p>
-                        <span class="price">£55.00</span>
-                    </div>
+                        <div class="featured-card text-center">
+                            <img src="/src/assets/images/card-3.png" alt="Pandora x Disney featured product"
+                                class="card-img img-fluid">
+                            <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
+                                class="pandora-disney-logo">
+                            <p class="product-desc">Disney The Little Mermaid Flounder Charm</p>
+                            <span class="price">£55.00</span>
+                        </div>
 
-                    <!-- Shop Now Link -->
-                    <div class="featured-link-wrapper">
-                        <a href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds"
-                            target="_blank" class="shop-now-link">
-                            Shop now
-                        </a>
+                        <!-- Shop Now Link -->
+                        <div class="featured-link-wrapper">
+                            <a href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds"
+                                target="_blank" class="shop-now-link">
+                                Shop now
+                            </a>
+                        </div>
                     </div>
                 </div>
             </section>
