Main section complete at mobile

--- a/src/index.html
+++ b/src/index.html
@@ -156,30 +156,48 @@
 
                         <!-- Featured Cards -->
                         <div class="featured-card text-center">
-                            <img src="/src/assets/images/card-1.png" alt="Pandora x Disney featured product"
-                                class="card-img img-fluid">
-                            <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
-                                class="pandora-disney-logo">
-                            <p class="product-desc">Disney Luminous Ariel Dangle Charm</p>
-                            <span class="price">£60.00</span>
+                            <div class="card-img">
+                                <img src="/src/assets/images/card-1.png" alt="Pandora x Disney featured product"
+                                    class="card-img img-fluid">
+                            </div>
+                            <div class="card-info">
+                                <div class="pandora-disney-logo">
+                                    <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
+                                        class="pandora-disney-logo">
+                                </div>
+                                <p class="product-desc">Disney Luminous Ariel Dangle Charm</p>
+                                <span class="price">£60.00</span>
+                            </div>
                         </div>
 
                         <div class="featured-card text-center">
-                            <img src="/src/assets/images/card-2.png" alt="Pandora x Disney featured product"
-                                class="card-img img-fluid">
-                            <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
-                                class="pandora-disney-logo">
-                            <p class="product-desc">Disney Ariel Dangle Charm</p>
-                            <span class="price">£55.00</span>
+                            <div class="card-img">
+                                <img src="/src/assets/images/card-2.png" alt="Pandora x Disney featured product"
+                                    class="card-img img-fluid">
+                            </div>
+                            <div class="card-info">
+                                <div class="pandora-disney-logo">
+                                    <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
+                                        class="pandora-disney-logo">
+                                </div>
+                                <p class="product-desc">Disney Ariel Dangle Charm</p>
+                                <span class="price">£55.00</span>
+                            </div>
                         </div>
 
                         <div class="featured-card text-center">
-                            <img src="/src/assets/images/card-3.png" alt="Pandora x Disney featured product"
-                                class="card-img img-fluid">
-                            <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
-                                class="pandora-disney-logo">
-                            <p class="product-desc">Disney The Little Mermaid Flounder Charm</p>
-                            <span class="price">£55.00</span>
+                            <div class="card-img">
+                                <img src="/src/assets/images/card-3.png" alt="Pandora x Disney featured product"
+                                    class="card-img img-fluid">
+                            </div>
+                            <div class="card-info">
+                                <div class="pandora-disney-logo">
+                                    <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
+                                        class="pandora-disney-logo">
+                                </div>
+                                <p class="product-desc">Disney The Little Mermaid Flounder Charm</p>
+                                <span class="price">£55.00</span>
+                            </div>
                         </div>
 
                         <!-- Shop Now Link -->
