Landing page complete at mobile

--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
                             </div>
                             <div class="hero-link-wrapper">
                                 <a href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds"
-                                    target="_blank" class="box-link shop-now-link">
+                                    target="_blank" class="box-link box-link--black">
                                     Shop now
                                 </a>
                             </div>
@@ -146,7 +146,7 @@
                         </div>
                         <div class="main-link-wrapper">
                             <a href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds"
-                                target="_blank" class="box-link shop-now-link">
+                                target="_blank" class="box-link box-link--red">
                                 Shop now
                             </a>
                         </div>
@@ -216,9 +216,11 @@
     <footer class="footer">
         <div class="container">
             <div class="content-wrapper">
-                <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
-                    class="pandora-disney-logo">
-                <p class="copyright">
+                <div class="pandora-disney-logo text-center">
+                    <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
+                        class="pandora-disney-logo">
+                </div>
+                <p class="copyright text-center">
                     Landing page. &copy;2020 Copyright. Designed & Developed by Chantal St Louis with love
                 </p>
 
