--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="collapse navbar-collapse justify-content-lg-end" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item active">
                                 <a class="nav-link" href="#">Charm Braclets<span class="sr-only">(current)</span></a>
@@ -81,28 +81,30 @@
             <section class="hero">
                 <div class="content-wrapper">
                     <div class="hero-bg-img">
-                        <div class="hero-featured-img-block">
-                            <img src="/src/assets/images/hero-featured-img.png" alt="Pandora x Disney featured image"
-                                class="hero-featured-img img-fluid">
-                        </div>
+                        <div class="d-lg-flex justify-content-lg-between flex-lg-row-reverse">
+                            <div class="hero-featured-img-block">
+                                <img src="/src/assets/images/hero-featured-img.png"
+                                    alt="Pandora x Disney featured image" class="hero-featured-img img-fluid">
+                            </div>
 
-                        <div class="hero-txt-block">
-                            <div class="pandora-disney-logo">
-                                <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
-                                    class="pandora-disney-logo img-fluid">
-                            </div>
-                            <div class="hero-txt">
-                                <h1 class="hero-hdr">Splash of magic</h1>
-                                <p class="text-block-desc">
-                                    Discover the magical arrival of jewellery inspired
-                                    by Disney’s The Little Mermaid
-                                </p>
-                            </div>
-                            <div class="hero-link-wrapper">
-                                <a href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds"
-                                    target="_blank" class="box-link box-link--black">
-                                    Shop now
-                                </a>
+                            <div class="hero-txt-block">
+                                <div class="pandora-disney-logo">
+                                    <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
+                                        class="pandora-disney-logo img-fluid">
+                                </div>
+                                <div class="hero-txt">
+                                    <h1 class="hero-hdr">Splash of magic</h1>
+                                    <p class="text-block-desc">
+                                        Discover the magical arrival of jewellery inspired
+                                        by Disney’s The Little Mermaid
+                                    </p>
+                                </div>
+                                <div class="hero-link-wrapper">
+                                    <a href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds"
+                                        target="_blank" class="box-link box-link--black">
+                                        Shop now
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -114,7 +116,7 @@
     <main class="main">
         <div class="container">
             <section class="mid-nav">
-                <ul class="nav justify-content-center">
+                <ul class="nav justify-content-center justify-content-sm-start">
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Charm Braclets</a>
                     </li>
@@ -129,79 +131,90 @@
 
             <section class="main-content">
                 <div class="content-wrapper">
-                    <div class="main-featured-img-wrapper">
-                        <img src="/src/assets/images/main-featured-img.png" alt="Pandora x Disney main featured image"
-                            class="main-featured-img img-fluid">
-                    </div>
-                    <div class="main-txt-block">
-                        <div class="pandora-disney-logo">
-                            <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
-                                class="pandora-disney-logo">
+                    <div class="d-lg-flex">
+                        <div class="main-featured-img-wrapper">
+                            <img src="/src/assets/images/main-featured-img.png"
+                                alt="Pandora x Disney main featured image" class="main-featured-img img-fluid">
                         </div>
-                        <div class="txt">
-                            <p class="text-block-desc">
-                                Discover the magical arrival of jewellery inspired
-                                by Disney’s The Little Mermaid
-                            </p>
-                        </div>
-                        <div class="main-link-wrapper">
-                            <a href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds"
-                                target="_blank" class="box-link box-link--red">
-                                Shop now
-                            </a>
+                        <div class="main-txt-block">
+                            <div class="pandora-disney-logo">
+                                <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
+                                    class="pandora-disney-logo">
+                            </div>
+                            <div class="txt">
+                                <p class="text-block-desc">
+                                    Weave wonderful stories into stylings with the magical arrivals of the Pandora
+                                    Disney
+                                    collection. Complete your silver bracelet with hand-crafted Disney charms.
+                                </p>
+                            </div>
+                            <div class="main-link-wrapper">
+                                <a href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds"
+                                    target="_blank" class="box-link box-link--red">
+                                    Shop now
+                                </a>
+                            </div>
                         </div>
                     </div>
 
                     <div class="cards">
+                        <div class="cards-wrapper d-lg-flex">
 
-                        <!-- Featured Cards -->
-                        <div class="featured-card text-center">
-                            <div class="card-img">
-                                <img src="/src/assets/images/card-1.png" alt="Pandora x Disney featured product"
-                                    class="card-img img-fluid">
+                            <!-- Featured Cards -->
+                            <div class="featured-card text-center">
+                                <a href="#">
+                                    <div class="card-img">
+                                        <img src="/src/assets/images/card-1.png" alt="Pandora x Disney featured product"
+                                            class="card-img img-fluid">
+                                    </div>
+                                    <div class="card-info">
+                                        <div class="pandora-disney-logo">
+                                            <img src="/src/assets/images/hero-logo.png"
+                                                alt="Pandora Disney Collaboration" class="pandora-disney-logo">
+                                        </div>
+                                        <p class="product-desc">Disney Luminous Ariel Dangle Charm</p>
+                                        <span class="price">£60.00</span>
+                                    </div>
+                                </a>
                             </div>
-                            <div class="card-info">
-                                <div class="pandora-disney-logo">
-                                    <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
-                                        class="pandora-disney-logo">
-                                </div>
-                                <p class="product-desc">Disney Luminous Ariel Dangle Charm</p>
-                                <span class="price">£60.00</span>
-                            </div>
-                        </div>
 
-                        <div class="featured-card text-center">
-                            <div class="card-img">
-                                <img src="/src/assets/images/card-2.png" alt="Pandora x Disney featured product"
-                                    class="card-img img-fluid">
+                            <div class="featured-card text-center">
+                                <a href="#">
+                                    <div class="card-img">
+                                        <img src="/src/assets/images/card-2.png" alt="Pandora x Disney featured product"
+                                            class="card-img img-fluid">
+                                    </div>
+                                    <div class="card-info">
+                                        <div class="pandora-disney-logo">
+                                            <img src="/src/assets/images/hero-logo.png"
+                                                alt="Pandora Disney Collaboration" class="pandora-disney-logo">
+                                        </div>
+                                        <p class="product-desc">Disney Ariel Dangle Charm</p>
+                                        <span class="price">£55.00</span>
+                                    </div>
+                                </a>
                             </div>
-                            <div class="card-info">
-                                <div class="pandora-disney-logo">
-                                    <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
-                                        class="pandora-disney-logo">
-                                </div>
-                                <p class="product-desc">Disney Ariel Dangle Charm</p>
-                                <span class="price">£55.00</span>
-                            </div>
-                        </div>
 
-                        <div class="featured-card text-center">
-                            <div class="card-img">
-                                <img src="/src/assets/images/card-3.png" alt="Pandora x Disney featured product"
-                                    class="card-img img-fluid">
-                            </div>
-                            <div class="card-info">
-                                <div class="pandora-disney-logo">
-                                    <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
-                                        class="pandora-disney-logo">
-                                </div>
-                                <p class="product-desc">Disney The Little Mermaid Flounder Charm</p>
-                                <span class="price">£55.00</span>
+                            <div class="featured-card text-center">
+                                <a href="#">
+                                    <div class="card-img">
+                                        <img src="/src/assets/images/card-3.png" alt="Pandora x Disney featured product"
+                                            class="card-img img-fluid">
+                                    </div>
+                                    <div class="card-info">
+                                        <div class="pandora-disney-logo">
+                                            <img src="/src/assets/images/hero-logo.png"
+                                                alt="Pandora Disney Collaboration" class="pandora-disney-logo">
+                                        </div>
+                                        <p class="product-desc">Disney The Little Mermaid Flounder Charm</p>
+                                        <span class="price">£55.00</span>
+                                    </div>
+                                </a>
                             </div>
                         </div>
 
                         <!-- Shop Now Link -->
-                        <div class="featured-link-wrapper">
+                        <div class="featured-link-wrapper text-center">
                             <a href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds"
                                 target="_blank" class="shop-now-link">
                                 Shop now
@@ -216,12 +229,13 @@
     <footer class="footer">
         <div class="container">
             <div class="content-wrapper">
-                <div class="pandora-disney-logo text-center">
+                <div class="footer-logo text-center">
                     <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
                         class="pandora-disney-logo">
                 </div>
                 <p class="copyright text-center">
-                    Landing page. &copy;2020 Copyright. Designed & Developed by Chantal St Louis with love
+                    Landing page. &copy;2020 Copyright. Designed & Developed by Chantal St Louis
+                    with love
                 </p>
 
             </div>
