Top nav hover effects complete

--- a/src/index.html
+++ b/src/index.html
@@ -118,7 +118,7 @@
             <section class="mid-nav">
                 <ul class="nav justify-content-center justify-content-sm-start">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Charm Braclets</a>
+                        <a class="nav-link active" href="#">Gifts</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Collection</a>
