Scroll reveal added

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
 
 
             <!-- Hero Image -->
-            <section class="hero">
+            <section class="hero fast-reveal">
                 <div class="content-wrapper">
                     <div class="hero-bg-img">
                         <div class="d-lg-flex justify-content-lg-between flex-lg-row-reverse">
@@ -101,7 +101,7 @@
                                 </div>
                                 <div class="hero-link-wrapper">
                                     <a href="https://uk.pandora.net/en/jewellery/disney/?ps_kw=pandora%20disney&cid=sem:branded:e:en_gb::adwords:XDECISION_UK_EN_Search_Brand_AllCategories_Women_2018_:spri19:te:::epiphany&gclid=Cj0KCQiAsvTxBRDkARIsAH4W_j9JJEKw11fXccPTzsB9Fu6ipYHl7SlHN8E3CmKhEz0k5oNylBMINgcaAm5fEALw_wcB&gclsrc=aw.ds"
-                                        target="_blank" class="box-link box-link--black">
+                                        target="_blank" class="box-link box-animation box-link--black">
                                         Shop now
                                     </a>
                                 </div>
@@ -132,11 +132,11 @@
             <section class="main-content">
                 <div class="content-wrapper">
                     <div class="d-lg-flex">
-                        <div class="main-featured-img-wrapper">
+                        <div class="main-featured-img-wrapper fast-reveal">
                             <img src="/src/assets/images/main-featured-img.png"
                                 alt="Pandora x Disney main featured image" class="main-featured-img img-fluid">
                         </div>
-                        <div class="main-txt-block">
+                        <div class="main-txt-block mid-reveal">
                             <div class="pandora-disney-logo">
                                 <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
                                     class="pandora-disney-logo">
@@ -161,7 +161,7 @@
                         <div class="cards-wrapper d-lg-flex">
 
                             <!-- Featured Cards -->
-                            <div class="featured-card text-center">
+                            <div class="featured-card text-center fast-reveal">
                                 <a href="#">
                                     <div class="card-img">
                                         <img src="/src/assets/images/card-1.png" alt="Pandora x Disney featured product"
@@ -178,7 +178,7 @@
                                 </a>
                             </div>
 
-                            <div class="featured-card text-center">
+                            <div class="featured-card text-center mid-reveal">
                                 <a href="#">
                                     <div class="card-img">
                                         <img src="/src/assets/images/card-2.png" alt="Pandora x Disney featured product"
@@ -195,7 +195,7 @@
                                 </a>
                             </div>
 
-                            <div class="featured-card text-center">
+                            <div class="featured-card text-center slow-reveal">
                                 <a href="#">
                                     <div class="card-img">
                                         <img src="/src/assets/images/card-3.png" alt="Pandora x Disney featured product"
@@ -241,6 +241,7 @@
             </div>
         </div>
     </footer>
+    <script src="https://unpkg.com/scrollreveal"></script>
 </body>
 
 </html>
