Added link to footer logo

--- a/src/index.html
+++ b/src/index.html
@@ -239,8 +239,10 @@
             <div class="content-wrapper">
                 <div>
                     <div class="footer-logo text-center">
-                        <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
-                            class="pandora-disney-logo">
+                        <a href="https://uk.pandora.net/en/" target="_blank">
+                            <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
+                                class="pandora-disney-logo">
+                        </a>
                     </div>
                     <p class="copyright text-center">
                         Landing page. &copy;2020 Copyright. Designed & Developed by Chantal St Louis
