Added portfolio link in footer and pink brand colour variable

--- a/src/index.html
+++ b/src/index.html
@@ -245,7 +245,8 @@
                         </a>
                     </div>
                     <p class="copyright text-center">
-                        Landing page. &copy;2020 Copyright. Designed & Developed by Chantal St Louis
+                        Landing page. &copy;2020 Copyright. Designed & Developed by <a href="http://chantalstlouis.com/"
+                            target="_blank" class="portfolio-link"> Chantal St Louis</a>
                         with love
                     </p>
                 </div>
